<resources>
    <string name="app_name">GAME SUIT GUNTING BATU KERTAS</string>

    <string name="kertas">Kertas</string>
    <string name="gunting">Gunting</string>
    <string name="pemain_1">Pemain 1</string>
    <string name="batu">Batu</string>
    <string name="com">COM</string>
    <string name="vs">VS</string>
    <string name="r">batu</string>
    <string name="p">kertas</string>
    <string name="s">gunting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bermain_suit_melawan_sesama_pemain">Bermain Suit melawan sesama pemain</string>
    <string name="bermain_suit_melawan_komputer">Bermain suit melawan komputer.</string>
    <string name="logo_landing_page_2">Logo Landing Page 2</string>
    <string name="tuliskan_namamu_dibawah">Tuliskan namamu dibawah</string>
    <string name="gambar_landing_page_1">Gambar Landing Page 1</string>
    <string name="nama_player">Nama Player</string>
    <string name="gambar_landing_page_2">Gambar landing page 2</string>
    <string name="player_2">Player 2</string>
    <string name="refresh">Refresh</string>
    <string name="player_vs_player">Player vs player</string>
    <string name="pilih_lawanmu">PILIH LAWANMU</string>
    <string name="vs_pemain"> vs Pemain</string>
    <string name="player_vs_cpu">Player vs CPU</string>
    <string name="vs_cpu"> vs CPU</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="password2">Password</string>
    <string name="username2">Username</string>
    <string name="sign_in">Sign In</string>
    <string name="normal">Normal</string>
    <string name="theme">Theme</string>
    <string name="dark">Dark</string>
    <string name="setting">Setting</string>
    <string name="equal">=</string>
    <string name="lose">LOSE</string>
    <string name="win">WIN</string>
    <string name="draw">DRAW</string>
    <string name="cara_bermain">CARA BERMAIN :</string>
    <string name="_1_pilih_salah_satu_diantara_gambar_di_bawah_ini">1. Pilih salah satu diantara gambar di bawah ini:</string>
    <string name="_2_ikuti_aturan_di_bawah_ini">2. Ikuti Aturan di bawah ini:</string>
    <string name="you">YOU</string>
    <string name="enemy">ENEMY</string>
    <string name="help">Help</string>
    <string name="close">close</string>
    <string name="next">next</string>
    <string name="vs_player">vs Player</string>
    <string name="back">back</string>
    <string name="about">About</string>
    <string name="how_to_play">How to Play</string>
    <string name="image">image</string>
    <string name="hasil_permainan">Hasil permainan</string>
    <string name="main_lagi">Main Lagi</string>
    <string name="kembali_ke_menu">Kembali ke menu</string>
    <string name="about_content">Permainan suit merupakan permainan yang berasal dari tiongkok yang pilihannya adalah katak, siput dan ular, lalu mengalami perubahan dari waktu ke waktu hingga pilihannya menjadi gunting, kertas, batu.</string>
    <string name="avatar">avatar</string>

    <string name="sound_on">Game Sound ON</string>
    <string name="sound_off">Game Sound OFF</string>
    <string name="switch_music">SOUND</string>

    <string name="action_settings">Settings</string>
</resources>