<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.MainActivity2"
    android:padding="16dp">

    <ImageView
        android:id="@+id/btnClose"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:src="?attr/customBackgroundSrcCloseButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/close" />

    <TextView
        android:id="@+id/tvKertas"
        style="@style/txt"
        android:layout_marginTop="48dp"
        android:text="@string/kertas"
        android:textColor="#FF9800"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvGunting"
        style="@style/txt"
        android:layout_marginTop="32dp"
        android:text="@string/gunting"
        android:textColor="#4CAF50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvKertas" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/comicneue_bold"
        android:text=""
        android:textColor="#03A9F4"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/ivBatuP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBatu" />

    <TextView
        android:id="@+id/tvBatu"
        style="@style/txt"
        android:layout_marginTop="32dp"
        android:text="@string/batu"
        android:textColor="#9C27B0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvGunting" />

    <ImageView
        android:id="@+id/ivBatuP"
        style="@style/img"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/r"
        android:src="?attr/customSrcBatu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/ivKertasP"
        style="@style/img"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/p"
        android:src="?attr/customSrcKertas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBatuP" />

    <ImageView
        android:id="@+id/ivGuntingP"
        style="@style/img"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/s"
        android:src="?attr/customSrcGunting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivKertasP" />

    <TextView
        android:id="@+id/tvPemain2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/comicneue_bold"
        android:text="@string/player_2"
        android:textColor="#03A9F4"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ivBatuP2"
        app:layout_constraintTop_toBottomOf="@+id/tvBatu" />

    <ImageView
        android:id="@+id/ivBatuP2"
        style="@style/img"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/r"
        android:src="?attr/customSrcBatu"
        android:rotationY="180"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPemain2" />

    <ImageView
        android:id="@+id/ivKertasP2"
        style="@style/img"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/p"
        android:src="?attr/customSrcKertas"
        android:rotationY="180"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBatuP2" />

    <ImageView
        android:id="@+id/ivGuntingP2"
        style="@style/img"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/s"
        android:src="?attr/customSrcGunting"
        android:rotationY="180"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivKertasP2" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/comicneue_bold"
        android:rotation="-10"
        android:textColor="@color/red"
        android:text="@string/vs"
        android:textSize="72sp"
        app:layout_constraintBottom_toTopOf="@+id/ivGuntingP2"
        app:layout_constraintEnd_toStartOf="@+id/ivKertasP2"
        app:layout_constraintStart_toEndOf="@+id/ivKertasP"
        app:layout_constraintTop_toBottomOf="@+id/ivBatuP" />

    <ImageView
        android:id="@+id/ivRefresh"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:contentDescription="@string/refresh"
        android:src="?attr/customBackgroundSrcRefreshButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

<!--
ndroid:fontFamily="@font/comicneue_bold"
   android:fontFamily="@font/comicneue_bold"
    android:fontFamily="@font/comicneue_bold"
-->