<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/btnClose"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="?attr/customBackgroundSrcCloseButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/close" />

    <TextView
        android:id="@+id/tvKertas"
        style="@style/txt"
        android:layout_marginTop="48dp"
        android:text="@string/kertas"
        android:textColor="#FF9800"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvGunting"
        style="@style/txt"
        android:layout_marginTop="32dp"
        android:text="@string/gunting"
        android:textColor="#4CAF50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvKertas" />

    <TextView
        android:id="@+id/tvNameActivityMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/comicneue_bold"
        android:text=""
        android:textColor="#03A9F4"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/ivBatuP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBatu" />

    <TextView
        android:id="@+id/tvBatu"
        style="@style/txt"
        android:layout_marginTop="32dp"
        android:text="@string/batu"
        android:textColor="#9C27B0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvGunting" />

    <ImageView
        android:id="@+id/ivBatuP"
        style="@style/img"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/r"
        android:src="@drawable/batu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNameActivityMain" />

    <ImageView
        android:id="@+id/ivKertasP"
        style="@style/img"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/p"
        android:src="@drawable/kertas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBatuP" />

    <ImageView
        android:id="@+id/ivGuntingP"
        style="@style/img"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/s"
        android:src="@drawable/gunting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivKertasP" />

    <TextView
        android:id="@+id/tvPemain2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/comicneue_bold"
        android:text="@string/com"
        android:textColor="#03A9F4"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ivBatuC"
        app:layout_constraintTop_toBottomOf="@+id/tvBatu" />

    <ImageView
        android:id="@+id/ivBatuC"
        style="@style/img"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/r"
        android:src="@drawable/batu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPemain2" />

    <ImageView
        android:id="@+id/ivKertasC"
        style="@style/img"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/p"
        android:src="@drawable/kertas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBatuC" />

    <ImageView
        android:id="@+id/ivGuntingC"
        style="@style/img"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/s"
        android:src="@drawable/gunting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivKertasC" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/comicneue_bold"
        android:rotation="-10"
        android:textColor="@color/red"
        android:text="@string/vs"
        android:textSize="72sp"
        app:layout_constraintBottom_toTopOf="@+id/ivGuntingC"
        app:layout_constraintEnd_toStartOf="@+id/ivKertasC"
        app:layout_constraintStart_toEndOf="@+id/ivKertasP"
        app:layout_constraintTop_toBottomOf="@+id/ivBatuP" />

    <ImageView
        android:id="@+id/ivRefresh"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:src="?attr/customBackgroundSrcRefreshButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/refresh" />

</androidx.constraintlayout.widget.ConstraintLayout>


<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".MainActivity">-->

<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Hello World!"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->


<!--</androidx.constraintlayout.widget.ConstraintLayout>-->

<!--ndroid:fontFamily="@font/comicneue_bold"-->

<!-- android:fontFamily="@font/comicneue_bold"-->

<!-- android:fontFamily="@font/comicneue_bold"-->

